--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,9 @@
 		<div class="blankSection">
 			
 		</div>
-		<div class="navigationSection" data-include="navbar">
-			<!-- <div class="container">
+		<!-- <div class="navigationSection" data-include="navbar"> -->
+		<div class="navigationSection">
+			<div class="container">
 			  <div class="row">
 			    <div class="col-3">
 			     	<div class="navigation navAni4"><a href="index.html" class="navigationlink"><span class="linktext">Back to Home</span></a></div>
@@ -33,7 +34,7 @@
 			    	<div class="navigation navAni1"><a href="achievements.html" class="navigationlink"><span class="linktext">Achievements</span></a></div>
 			    </div>
 			  </div>
-			</div> -->
+			</div>
 		</div>
 		<br>
 
@@ -138,7 +139,7 @@
 </body>
 </html>
 
-<script>
+<!-- <script>
 	$(function () {
 	  var includes = $('[data-include]')
 	  $.each(includes, function () {
@@ -146,7 +147,7 @@
 	    $(this).load(file)
 	  })
 	})
-</script>
+</script> -->
 <script type="text/javascript">
 	function typeThis(txt, speed, initdelay, idElement) {
 		var iThis = 0;
