--- a/aboutme.html
+++ b/aboutme.html
@@ -74,19 +74,19 @@
 		      <div class="container">
 		      	<div class="row">
 		      		<div class="col-2 contactIcon1">
-		      			<a href="google.html"><img src="img/facebookIcon.png" alt="Facebook" width="50" height="50"></a>
+		      			<a href="https://web.facebook.com/jasonaustin.juwono" target="_blank"><img src="img/facebookIcon.png" alt="Facebook" width="50" height="50"></a>
 		      		</div>
 		      		<div class="col-2 contactIcon2">
-		      			<a href="google.html"><img src="img/instagramIcon.png" alt="Instagram" width="50" height="50"></a>
+		      			<a href="https://www.instagram.com/jason.a.j/" target="_blank"><img src="img/instagramIcon.png" alt="Instagram" width="50" height="50"></a>
 		      		</div>
 		      		<div class="col-2 contactIcon3">
-		      			<a href="google.html"><img src="img/linkedinIcon.png" alt="LinkedIn" width="50" height="50"></a>
+		      			<a href="https://www.linkedin.com/in/jason-juwono-0908441b4/" target="_blank"><img src="img/linkedinIcon.png" alt="LinkedIn" width="50" height="50"></a>
 		      		</div>
 		      		<div class="col-2 contactIcon4">
-		      			<a href="google.html"><img src="img/githubIcon.png" alt="GitHub" width="50" height="50"></a>
+		      			<a href="https://github.com/Jastino747" target="_blank"><img src="img/githubIcon.png" alt="GitHub" width="50" height="50"></a>
 		      		</div>
 		      		<div class="col-2 contactIcon5">
-		      			<a href="google.html"><img src="img/youtubeIcon.png" alt="YouTube" width="50" height="50"></a>
+		      			<a href="https://www.youtube.com/channel/UCx_qhoypNKQpC5VDVKsytpg" target="_blank"><img src="img/youtubeIcon.png" alt="YouTube" width="50" height="50"></a>
 		      		</div>
 		      	</div>
 		      </div>
