--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
 			     	<p>My very first "Windows Form Application" game, based on C# programming language. A semi-endless survival racing game, where you play as a white car and must not crash onto any other car. The longer you survive, more points will be awarded for you, and more cars will be there to distract you.</p>
 			     	<p>Platform: Windows Form Application</p>
 			     	<p>Programming Language: C#</p>
-			     	<p>Project source available on my <a style="color: black; text-decoration: underline;" href="">GitHub Repository</a>, check it out :)</p>
+			     	<p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/KrazyRacer" target="_blank">GitHub Repository</a>, check it out :)</p>
 			    </div>
 			    <div class="col-3 projectsPhotoCont">
 			      <img class="border5px" src="img/projectimg/KrazyRacer1.png" alt="Krazy Racer Image" width="180" height="300">
@@ -80,7 +80,7 @@
 			     	<p>My other "Windows Form Application" game, based on C# programming language. An endless typing game, where you have to type the requested words againts the time. The more you type, the more points you will get.</p>
 			     	<p>Platform: Windows Form Application</p>
 			     	<p>Programming Language: C#</p>
-			     	<p>Project source available on my <a style="color: black; text-decoration: underline;" href="">GitHub Repository</a>, check it out :)</p>
+			     	<p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/SS-Typer" target="_blank">GitHub Repository</a>, check it out :)</p>
 			    </div>
 			  </div>
 			</div>	
@@ -101,7 +101,7 @@
 			     	<p>Like the name, it's an imitation for the famous "Pac Man" game, but with "Windows Form App Game" and based on C# programming language. If you know the "Pac Man" game, you will know how this game works. Collect all the pellets, avoid the ghosts, and use the powerups.</p>
 			     	<p>Platform: Windows Form Application</p>
 			     	<p>Programming Language: C#</p>
-			     	<p>Project source available on my <a style="color: black; text-decoration: underline;" href="">GitHub Repository</a>, check it out :)</p>
+			     	<p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/PaqMen" target="_blank">GitHub Repository</a>, check it out :)</p>
 			    </div>
 			    <div class="col-3 projectsPhotoCont">
 			      <img class="border5px" src="img/projectimg/PaqMan1.png" alt="Paq Man Image" width="200" height="300">
@@ -128,7 +128,7 @@
 			     	<p>A simple text encryptor, with custom algorithm implemented. Enables you to encrypt text, and decrypt the same encrypted text. Simple implementation with index switching methods, random scrambler, and other customized methods.</p>
 			     	<p>Platform: Windows Form Application</p>
 			     	<p>Programming Language: C#</p>
-			     	<p>Project source available on my <a style="color: black; text-decoration: underline;" href="">GitHub Repository</a>, check it out :)</p>
+			     	<p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/EnDecrypt" target="_blank">GitHub Repository</a>, check it out :)</p>
 			    </div>
 			  </div>
 			</div>	
