--- a/aboutme.html
+++ b/aboutme.html
@@ -80,7 +80,7 @@
 		      			<a href="https://www.instagram.com/jason.a.j/" target="_blank"><img src="img/instagramIcon.png" alt="Instagram" width="50" height="50"></a>
 		      		</div>
 		      		<div class="col-2 contactIcon3">
-		      			<a href="https://www.linkedin.com/in/jason-juwono-0908441b4/" target="_blank"><img src="img/linkedinIcon.png" alt="LinkedIn" width="50" height="50"></a>
+		      			<a href="https://www.linkedin.com/in/jason-juwono/" target="_blank"><img src="img/linkedinIcon.png" alt="LinkedIn" width="50" height="50"></a>
 		      		</div>
 		      		<div class="col-2 contactIcon4">
 		      			<a href="https://github.com/Jastino747" target="_blank"><img src="img/githubIcon.png" alt="GitHub" width="50" height="50"></a>
