--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@
 			<div class="container">
 			  <div class="row">
 			    <div class="col-3">
-			     	<div class="navigation navAni4"><a href="index.html" class="navigationlink"><span class="linktext">Back to Home</span></a></div>
+			     	<div class="navigation navAni4"><a href="index.html" class="navigationlink"><span class="linktext">Home</span></a></div>
 			    </div>
 			    <div class="col-3">
 			     	<div class="navigation navAni3 navActive"><a href="aboutme.html" class="navigationlink"><span class="linktext">About Me</span></a></div>
@@ -45,7 +45,7 @@
 		</div>	
 		<div class="container">
 		  <div class="row">
-		    <div class="col-7 aboutMeGeneralInfo border5px aboutMeGenInfoAni">
+		    <div class="col-lg-7 aboutMeGeneralInfo border5px aboutMeGenInfoAni">
 		     	<!-- <p>Name    <span>: Jason Austin Juwono, S.Kom.</span></p>
 		     	<p>Hometown<span>: Surabaya, East Java, Indonesia</span></p>
 		     	<p>Email   <span>: jaj271098@gmail.com</span></p> -->
@@ -68,8 +68,9 @@
 		     		<p id="genInfoMore3"></p>
 		     	</div>
 		    </div>
-		    <div class="col-5 aboutMePhotoCont imgAboutPhoto">
-		      <img class="border5px" src="img/aboutPhoto.jpeg" alt="Another photo of me" width="420" height="420">
+		    <div class="col-lg-5 aboutMePhotoCont imgAboutPhoto">
+		      <!-- <img class="border5px" src="img/aboutPhoto.jpeg" alt="Another photo of me" width="420" height="420"> -->
+		      <img class="border5px img-fluid" src="img/aboutPhoto.jpeg" alt="Another photo of me">
 		      <br><br>
 		      <div class="container">
 		      	<div class="row">
@@ -124,7 +125,7 @@
 	typeThis('Hometown : ', 50, 1700, "genInfoAni2A");
 	typeThis('Email : ', 50, 1900, "genInfoAni3A");
 	typeThis('Jason Austin Juwono', 50, 1500, "genInfoAni1B");
-	typeThis('Surbaya, East Java, Indonesia', 50, 1700, "genInfoAni2B");
+	typeThis('Surabaya, East Java, Indonesia', 50, 1700, "genInfoAni2B");
 	typeThis('jaj271098@gmail.com', 50, 1900, "genInfoAni3B");
 	typeThis('Currently in this 2021, I am a freshgraduate from University of Surabaya, Bachelor of Information Technology.', 10, 2000, "genInfoMore1");
 	typeThis('The main thing that motivates me to work, is being able to solve the existing problem by making the programs and the custom algorithm. Hence, that is my main passion for work.', 10, 3200, "genInfoMore2");
