--- a/achievements.html
+++ b/achievements.html
@@ -22,7 +22,7 @@
 			<div class="container">
 			  <div class="row">
 			    <div class="col-3">
-			     	<div class="navigation navAni4"><a href="index.html" class="navigationlink"><span class="linktext">Back to Home</span></a></div>
+			     	<div class="navigation navAni4"><a href="index.html" class="navigationlink"><span class="linktext">Home</span></a></div>
 			    </div>
 			    <div class="col-3">
 			     	<div class="navigation navAni3"><a href="aboutme.html" class="navigationlink"><span class="linktext">About Me</span></a></div>
@@ -44,10 +44,10 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/genTraining/Digitalent Schoolarship 2019 Certificate Page 1.jpg" alt="General Training" width="100%" height="100%">
 					</div>
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/genTraining/UK Petra Industrial Automation.jpg" alt="General Training" width="100%" height="100%">
 					</div>
 				</div> <br>
@@ -60,66 +60,66 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/AWS Cloud Practitioner Essentials (Second Edition) (Indonesian (Bahasa)).jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/Demystifying AI-ML-DL.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
 				</div> <br>
 				<div class="row">
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/Introduction to AWS DeepLens.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/Introduction to AWS Machine Learning Services.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
 				</div> <br>
 				<div class="row">
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/IoT Foundation - Command and Control.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/IoT Foundation - Introduction to Fleet Management.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
 				</div> <br>
 				<div class="row">
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/IoT Foundation - Telemetry.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/M1 - Pengantar to the AWS Cloud.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
 				</div> <br>
 				<div class="row">
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/M2 - Layanan Utama AWS.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/M3 - Layanan Terpadu.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
 				</div> <br>
 				<div class="row">
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/M4 - Arsitektur AWS.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/M5 - Keamanan AWS.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
 				</div> <br>
 				<div class="row">
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/M6 - Harga dan Dukunga.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/What is Artificial Intelligence.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
 				</div> <br>
 				<div class="row">
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/What is Deep Learning.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/awsTraining/What is Machine Learning.jpg" alt="AWS Training" width="100%" height="100%">
 					</div>
 				</div> <br>
@@ -132,18 +132,18 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/competition/Innopa Gold.jpg" alt="Competition Certificate" width="100%" height="100%">
 					</div>
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/competition/Innopa Bronze.jpg" alt="Competition Certificate" width="100%" height="100%">
 					</div>
 				</div> <br>
 				<div class="row">
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/competition/Innopa Participation.jpg" alt="Competition Certificate" width="100%" height="100%">
 					</div>
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/competition/ITS National Logic Competition.jpg" alt="Competition Certificate" width="100%" height="50%">
 					</div>
 				</div> <br>
@@ -156,10 +156,10 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/other/Hendrikus Best UNBK.jpg" alt="Other" width="100%" height="100%">
 					</div>
-					<div class="col-6">
+					<div class="col-lg-6">
 						<img class="border5px" src="img/certificates/other/Hendrikus Best Achievement.jpg" alt="Other" width="100%" height="100%">
 					</div>
 				</div> <br>
