--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 		</div>		
 		<div class="container">
 		  <div class="row">
-		    <div class="col-7 homeButtonsCont border5px">
-		     	<div class="directory homeDir1"><a href="aboutme.html" class="directorylink"><span class="linktext">About Me</span></a></div>
+		    <div class="col-md-7 homeButtonsCont border5px">
+	     		<div class="directory homeDir1"><a href="aboutme.html" class="directorylink"><span class="linktext">About Me</span></a></div>
 					<div class="directory homeDir2"><a href="projects.html" class="directorylink"><span class="linktext">Projects</span></a></div>
 					<div class="directory homeDir3"><a href="achievements.html" class="directorylink"><span class="linktext">Achievements</span></a></div>
 		    </div>
-		    <div class="col-5 homePhotoCont">
-		      <img class="border5px" src="img/homePhoto.jpg" alt="Photo of me" width="410" height="490">
+		    <div class="col-md-5 homePhotoCont">
+		      <img class="border5px img-fluid" src="img/homePhoto.jpg" alt="Photo of me">
 		    </div>
 		  </div>
 		</div>	
