--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,190 @@
 		</div>
 		<br>
 
+
+
+		<!-- Project Container Right Photo -->
+		<div class="projectCont rightPhoto">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="projectsAnimatedTextSection leftProjectHeader">
+						<p id="pProjectsName" class="pProjectsName" style="">Course Schedule Generator</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="container">
+			  <div class="row">
+			    <div class="col-lg-9 projectsGeneralInfo border5px">
+			     	<p>A university weekly course generator, powered by Depth First Search (DFS) and Simple Multi Attribute Rating Technique (SMART) algorithm.</p>
+			     	<p>Built in order to help the college students, to arrange their personal weekly university course schedule, that does not have time conflict with each other course inside the schedule. This process was mainly powered by DFS algorithm.</p>
+			     	<p>Also featuring schedule recommendation system, that enables user to receive recommended schedule, based on their personal preferences. SMART algorithm has a main role in this recommendation system.</p>
+			     	<p>Platform: Web Application & Mobile App</p>
+			     	<p>Framework: Laravel, Framework7</p>
+			     	<p>Programming Language: HTML, CSS, PHP, JavaScript, Blade</p>
+			     	<!-- <p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/HuffmanBST" target="_blank">GitHub Repository</a>, check it out :)</p> -->
+			    </div>
+			    <div class="col-lg-3 projectsPhotoCont">
+			      <!-- <img class="border5px" src="img/projectimg/PaqMan1.png" alt="Paq Man Image" width="200" height="300"> -->
+			      <img class="border5px projectImage img-fluid" src="img/projectimg/ScheduleGenerator.gif" alt="Course Schedule Generator Image">
+			    </div>
+			  </div>
+			</div><br>
+		</div><br>
+
+		<!-- Project Container Left Photo -->
+		<div class="projectCont leftPhoto">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="projectsAnimatedTextSection rightProjectHeader">
+						<p id="pProjectsName" class="pProjectsName" style="">Stick Parkour</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="container">
+			  <div class="row">
+			    <div class="col-lg-3 projectsPhotoCont">
+			      <!-- <img class="border5px" src="img/projectimg/EnDecrypt1.png" alt="EnDecrypt Image" width="260" height="300"> -->
+			      <img class="border5px projectImage img-fluid" src="img/projectimg/StickParkour.gif" alt="Stick Parkour Image">
+			    </div>
+			    <div class="col-lg-9 projectsGeneralInfo border5px">
+			     	<p>A phaser based game, that I developed for Mobile Game Development Course. An endless game where you have to dodge the obstacle, jump around the platform, and collect the points. You can use bullets to destroy the obstacles, and gain extra score from it.</p>
+			     	<p>Platform: Phaser</p>
+			     	<p>Programming Language: HTML5</p>
+			     	<!-- <p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/EnDecrypt" target="_blank">GitHub Repository</a>, check it out :)</p> -->
+			    </div>
+			  </div>
+			</div><br>
+		</div><br>
+
+		<!-- Project Container Right Photo -->
+		<div class="projectCont rightPhoto">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="projectsAnimatedTextSection leftProjectHeader">
+						<p id="pProjectsName" class="pProjectsName" style="">Human Resource Analyzator</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="container">
+			  <div class="row">
+			    <div class="col-lg-9 projectsGeneralInfo border5px">
+			     	<p>An app for Human Resource Analyzator. Consist of a mobile app to feed the data of the workpace of each human resource, to this system's web app server.</p>
+			     	<p>Platform: Web Application & Mobile App</p>
+			     	<p>Framework: Laravel, Framework7</p>
+			     	<p>Programming Language: HTML, CSS, PHP, JavaScript, Blade</p>
+			     	<!-- <p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/HuffmanBST" target="_blank">GitHub Repository</a>, check it out :)</p> -->
+			    </div>
+			    <div class="col-lg-3 projectsPhotoCont">
+			      <!-- <img class="border5px" src="img/projectimg/PaqMan1.png" alt="Paq Man Image" width="200" height="300"> -->
+			      <img class="border5px projectImage img-fluid" src="img/projectimg/HumanResourceAnalyzator.gif" alt="Human Resource Analyzator Image">
+			    </div>
+			  </div>
+			</div><br>
+		</div><br>
+
+		<!-- Project Container Left Photo -->
+		<div class="projectCont leftPhoto">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="projectsAnimatedTextSection rightProjectHeader">
+						<p id="pProjectsName" class="pProjectsName" style="">One Button</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="container">
+			  <div class="row">
+			    <div class="col-lg-3 projectsPhotoCont">
+			      <!-- <img class="border5px" src="img/projectimg/EnDecrypt1.png" alt="EnDecrypt Image" width="260" height="300"> -->
+			      <img class="border5px projectImage img-fluid" src="img/projectimg/OneButton.gif" alt="One Button Image">
+			    </div>
+			    <div class="col-lg-9 projectsGeneralInfo border5px">
+			     	<p>A unity game, that only needs one button to play. This game is still in development phase, which still has only one level. As the title of this game describes, only one button is required to operate everything in this game, and win the game. So the key is, precission and timing.</p>
+			     	<p>The main objective of this game is to deliver the red ball into the finishing point, by activating the gadgets in precise timing.</p>
+			     	<p>Consists of simple 3d objects, with basic coloring.</p>
+			     	<p>The current main focus in the development is to add other levels (maps). The secondary focus in the development is to improve the graphic quality.</p>
+			     	<p>Platform: Unity</p>
+			     	<p>Programming Language: C#</p>
+			     	<!-- <p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/EnDecrypt" target="_blank">GitHub Repository</a>, check it out :)</p> -->
+			    </div>
+			  </div>
+			</div><br>
+		</div><br>
+
+		<!-- Project Container Right Photo -->
+		<div class="projectCont rightPhoto">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="projectsAnimatedTextSection leftProjectHeader">
+						<p id="pProjectsName" class="pProjectsName" style="">Sports D'Rent</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="container">
+			  <div class="row">
+			    <div class="col-lg-9 projectsGeneralInfo border5px">
+			     	<p>My very own prototype Web App, that gives opportunity to the users, to rent a sport arena collectively (rent together with the other users). The more users participate in that rent, the less cost will be charged for each user (collective rental system).</p>
+			     	<p>Platform: Web Application</p>
+			     	<p>Programming Language: HTML, CSS, PHP</p>
+			     	<!-- <p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/HuffmanBST" target="_blank">GitHub Repository</a>, check it out :)</p> -->
+			    </div>
+			    <div class="col-lg-3 projectsPhotoCont">
+			      <!-- <img class="border5px" src="img/projectimg/PaqMan1.png" alt="Paq Man Image" width="200" height="300"> -->
+			      <img class="border5px projectImage img-fluid" src="img/projectimg/SportsDRent1.png" alt="Sports D'Rent Image">
+			    </div>
+			  </div>
+			</div><br>
+		</div><br>
+
+		<!-- Project Container Left Photo -->
+		<div class="projectCont leftPhoto">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="projectsAnimatedTextSection rightProjectHeader">
+						<p id="pProjectsName" class="pProjectsName" style="">Tower of Hanoi</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="container">
+			  <div class="row">
+			    <div class="col-lg-3 projectsPhotoCont">
+			      <!-- <img class="border5px" src="img/projectimg/EnDecrypt1.png" alt="EnDecrypt Image" width="260" height="300"> -->
+			      <img class="border5px projectImage img-fluid" src="img/projectimg/TowerOfHanoi1.png" alt="Tower of Hanoi Image">
+			    </div>
+			    <div class="col-lg-9 projectsGeneralInfo border5px">
+			     	<p>Another "Windows Form App Game" based on C# programming language that I made with my colleagues for an Artificial Intelligence project, powered by DFS Algorithm for the Auto Solve AI. If you know how the Tower of Hanoi gameplay works, you can play this game. To limit the possible solutions, the disc count of the game is limited from 2 to 10.</p>
+			     	<p>Platform: Windows Form Application</p>
+			     	<p>Programming Language: C#</p>
+			     	<!-- <p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/EnDecrypt" target="_blank">GitHub Repository</a>, check it out :)</p> -->
+			    </div>
+			  </div>
+			</div><br>
+		</div><br>
+
+		<!-- Project Container Right Photo -->
+		<div class="projectCont rightPhoto">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="projectsAnimatedTextSection leftProjectHeader">
+						<p id="pProjectsName" class="pProjectsName" style="">Huffman BST</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="container">
+			  <div class="row">
+			    <div class="col-lg-9 projectsGeneralInfo border5px">
+			     	<p>A simple Huffman Binary Search Tree program, capable to arrange a Huffman Binary Search Tree according to your text input, and also arrange the binary code from the input. You can also decode the binary code from the formed tree, into the alphabetical text. This program was made for a simple project, for the data structure university course.</p>
+			     	<p>Platform: Windows Form Application</p>
+			     	<p>Programming Language: C#</p>
+			     	<p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/HuffmanBST" target="_blank">GitHub Repository</a>, check it out :)</p>
+			    </div>
+			    <div class="col-lg-3 projectsPhotoCont">
+			      <!-- <img class="border5px" src="img/projectimg/PaqMan1.png" alt="Paq Man Image" width="200" height="300"> -->
+			      <img class="border5px projectImage img-fluid" src="img/projectimg/HuffmanBST1.png" alt="Huffman BST Image">
+			    </div>
+			  </div>
+			</div><br>
+		</div><br>
+
 		<!-- Project Container Left Photo -->
 		<div class="projectCont leftPhoto">
 			<div class="container">
@@ -60,7 +244,7 @@
 			     	<p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/EnDecrypt" target="_blank">GitHub Repository</a>, check it out :)</p>
 			    </div>
 			  </div>
-			</div>	
+			</div><br>
 		</div><br>
 
 		<!-- Project Container Right Photo -->
@@ -85,7 +269,7 @@
 			      <img class="border5px projectImage img-fluid" src="img/projectimg/PaqMan1.png" alt="Paq Man Image">
 			    </div>
 			  </div>
-			</div>	
+			</div><br>
 		</div><br>
 
 		<!-- Project Container Left Photo -->
@@ -110,7 +294,7 @@
 			     	<p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/SS-Typer" target="_blank">GitHub Repository</a>, check it out :)</p>
 			    </div>
 			  </div>
-			</div>	
+			</div><br>
 		</div><br>
 
 		<!-- Project Container Right Photo -->
@@ -135,7 +319,7 @@
 			      <img class="border5px projectImage img-fluid" src="img/projectimg/KrazyRacer1.png" alt="Krazy Racer Image">
 			    </div>
 			  </div>
-			</div>	
+			</div><br>
 		</div><br>
 
 
