--- a/aboutme.html
+++ b/aboutme.html
@@ -87,8 +87,10 @@
 		      			<a href="https://github.com/Jastino747" target="_blank"><img src="img/githubIcon.png" alt="GitHub" width="50" height="50"></a>
 		      		</div>
 		      		<div class="col-2 contactIcon5">
-		      			<a href="https://www.youtube.com/channel/UCx_qhoypNKQpC5VDVKsytpg" target="_blank"><img src="img/youtubeIcon.png" alt="YouTube" width="50" height="50"></a>
+<!-- 		      			<a href="https://www.youtube.com/channel/UCx_qhoypNKQpC5VDVKsytpg" target="_blank"><img src="img/youtubeIcon.png" alt="YouTube" width="50" height="50"></a> -->
+		      			<a href=""><img src="img/youtubeIcon.png" alt="YouTube" width="50" height="50"></a>
 		      		</div>
+				</div>
 		      	</div>
 		      </div>
 		    </div>
