--- a/aboutme.html
+++ b/aboutme.html
@@ -131,7 +131,7 @@
 	typeThis('jaj271098@gmail.com', 50, 1900, "genInfoAni3B");
 	typeThis('Currently in this 2021, I am a freshgraduate from University of Surabaya, Bachelor of Information Technology.', 10, 2000, "genInfoMore1");
 	typeThis('The main thing that motivates me to work, is being able to solve the existing problem by making the programs and the custom algorithm. Hence, that is my main passion for work.', 10, 3200, "genInfoMore2");
-	typeThis('Currently, my 3 main programming language speciality is C#, PHP, and JavaScript. For the frameworks, experiences in Laravel for website development, and Framework7 for the mobile app development, is in my bag :)', 10, 5100, "genInfoMore3");
+	typeThis('Currently, my 3 main programming language specialities are C#, PHP, and JavaScript. For the frameworks, experiences in Laravel for website development, and Framework7 for the mobile app development, is in my bag :)', 10, 5100, "genInfoMore3");
 </script>
 
 <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
