--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Jason A. J.</title>
+	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<script src="jquery-3.5.1.min.js"></script>
@@ -28,7 +29,7 @@
 			     	<div class="navigation navAni3 navActive"><a href="aboutme.html" class="navigationlink"><span class="linktext">About Me</span></a></div>
 			    </div>
 			    <div class="col-3">
-			    	<div class="navigation navAni2"><a href="projects.html" class="navigationlink"><span class="linktext">Projects</span></a></div>
+			    	<div class="navigation navAni2"><a href="projects.html" class="navigationlink"><span class="linktext">Experiences</span></a></div>
 			    </div>
 			    <div class="col-3">
 			    	<div class="navigation navAni1"><a href="achievements.html" class="navigationlink"><span class="linktext">Achievements</span></a></div>
@@ -66,6 +67,7 @@
 		     		<p id="genInfoMore1"></p>
 		     		<p id="genInfoMore2"></p>
 		     		<p id="genInfoMore3"></p>
+		     		<p id="genInfoMore4"></p>
 		     	</div>
 		    </div>
 		    <div class="col-lg-5 aboutMePhotoCont imgAboutPhoto">
@@ -124,14 +126,15 @@
 
 	typeThis('Jason Austin Juwono', 50, 1000, "pAboutMeName");
 	typeThis('Name : ', 50, 1500, "genInfoAni1A");
-	typeThis('Hometown : ', 50, 1700, "genInfoAni2A");
-	typeThis('Email : ', 50, 1900, "genInfoAni3A");
+	typeThis('Hometown : ', 50, 1500, "genInfoAni2A");
+	typeThis('Email : ', 50, 1500, "genInfoAni3A");
 	typeThis('Jason Austin Juwono', 50, 1500, "genInfoAni1B");
-	typeThis('Surabaya, East Java, Indonesia', 50, 1700, "genInfoAni2B");
-	typeThis('jaj271098@gmail.com', 50, 1900, "genInfoAni3B");
-	typeThis('Currently in this 2021, I am a freshgraduate from University of Surabaya, Bachelor of Information Technology.', 10, 2000, "genInfoMore1");
-	typeThis('The main thing that motivates me to work, is being able to solve the existing problem by making the programs and the custom algorithm. Hence, that is my main passion for work.', 10, 3200, "genInfoMore2");
-	typeThis('Currently, my 3 main programming language speciality is C#, PHP, and JavaScript. For the frameworks, experiences in Laravel for website development, and Framework7 for the mobile app development, is in my bag :)', 10, 5100, "genInfoMore3");
+	typeThis('Surabaya, East Java, Indonesia', 50, 1500, "genInfoAni2B");
+	typeThis('jaj271098@gmail.com, jasjuwo@gmail.com', 50, 1500, "genInfoAni3B");
+	typeThis('I am a software developer, graduated from University of Surabaya on Jan 2021 Bachelor of Information Technology, working for a software house company in Surabaya.', 10, 2500, "genInfoMore1");
+	typeThis('The main thing that motivates me to work, is being able to solve the existing problem by making the programs and the custom algorithm. Hence, that is my main passion for work. That is why I found myself enjoying the work more on the back-end side.', 10, 2500, "genInfoMore2");
+	typeThis('Currently, my programming language speciality is PHP, and also JavaScript. I involved a lot in the development and customization of the Bitrix24 system for specific clients. Although Bitrix24 is my forte for now, the process of learning never stops for me. Hence I also have some experience also with mobile apps development.', 10, 2500, "genInfoMore3");
+	typeThis('If you have read this far, I say thank you. Feel free to contact me in one of my social media. Cheers :)', 10, 2500, "genInfoMore4");
 </script>
 
 <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
