--- a/achievements.html
+++ b/achievements.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Jason A. J.</title>
+	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<script src="jquery-3.5.1.min.js"></script>
@@ -28,7 +29,7 @@
 			     	<div class="navigation navAni3"><a href="aboutme.html" class="navigationlink"><span class="linktext">About Me</span></a></div>
 			    </div>
 			    <div class="col-3">
-			    	<div class="navigation navAni2"><a href="projects.html" class="navigationlink"><span class="linktext">Projects</span></a></div>
+			    	<div class="navigation navAni2"><a href="projects.html" class="navigationlink"><span class="linktext">Experiences</span></a></div>
 			    </div>
 			    <div class="col-3">
 			    	<div class="navigation navAni1 navActive"><a href="achievements.html" class="navigationlink"><span class="linktext">Achievements</span></a></div>
