--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Jason A. J.</title>
+	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<!-- <link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
@@ -25,7 +26,7 @@
 		  <div class="row">
 		    <div class="col-md-7 homeButtonsCont border5px">
 	     		<div class="directory homeDir1"><a href="aboutme.html" class="directorylink"><span class="linktext">About Me</span></a></div>
-					<div class="directory homeDir2"><a href="projects.html" class="directorylink"><span class="linktext">Projects</span></a></div>
+					<div class="directory homeDir2"><a href="projects.html" class="directorylink"><span class="linktext">Experiences</span></a></div>
 					<div class="directory homeDir3"><a href="achievements.html" class="directorylink"><span class="linktext">Achievements</span></a></div>
 		    </div>
 		    <div class="col-md-5 homePhotoCont">
