--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Jason A. J.</title>
+	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<script src="jquery-3.5.1.min.js"></script>
@@ -28,7 +29,7 @@
 			     	<div class="navigation navAni3"><a href="aboutme.html" class="navigationlink"><span class="linktext">About Me</span></a></div>
 			    </div>
 			    <div class="col-3">
-			    	<div class="navigation navAni2 navActive"><a href="projects.html" class="navigationlink"><span class="linktext">Projects</span></a></div>
+			    	<div class="navigation navAni2 navActive"><a href="projects.html" class="navigationlink"><span class="linktext">Experiences</span></a></div>
 			    </div>
 			    <div class="col-3">
 			    	<div class="navigation navAni1"><a href="achievements.html" class="navigationlink"><span class="linktext">Achievements</span></a></div>
@@ -39,6 +40,114 @@
 		<br>
 
 
+
+		<!-- Project Container Right Photo -->
+		<div class="projectCont rightPhoto">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="projectsAnimatedTextSection leftProjectHeader">
+						<p id="pProjectsName" class="pProjectsName" style="">Bitrix24 - Meeting and Task Customization for Financial Company</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="container">
+			  <div class="row">
+			    <div class="col-lg-9 projectsGeneralInfo border5px">
+			     	<p>Case</p>
+			     	<p>Having a big frequency of meetings and agenda that needs to be recorded and immediately assigned to the selected user as the task, the company needs a system to manage their meeting's information up to the task assignment. Additionally, the meetings has to have specific extra detail that they have been using in their manual system.</p>
+			     	<p>Solution</p>
+			     	<p>Bitrix24's default meeting feature was customized to contain their specific informations that by default cannot be accomodated by Bitrix24, for there are no facility to insert the custom fields. Additionaly, an extra meeting and tasks reporting page and periodic summarization module has been made. Now the company not only can record the meeting and task's information and view it in list, but also can be viewed in desired graphics and reports in the special dashboard page implemented in Bitrix24.</p>
+			     	<p>* Company's specific information not mentioned for confidential purpose</p>
+			     	<!-- <p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/HuffmanBST" target="_blank">GitHub Repository</a>, check it out :)</p> -->
+			    </div>
+			    <div class="col-lg-3 projectsPhotoCont">
+			      <!-- <img class="border5px" src="img/projectimg/PaqMan1.png" alt="Paq Man Image" width="200" height="300"> -->
+			      <img class="border5px projectImage img-fluid" src="img/projectimg/bitrix24.png" alt="Bitrix24">
+			    </div>
+			  </div>
+			</div><br>
+		</div><br>
+
+		<!-- Project Container Left Photo -->
+		<div class="projectCont leftPhoto">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="projectsAnimatedTextSection rightProjectHeader">
+						<p id="pProjectsName" class="pProjectsName" style="">Bitrix24 - CRM and Project Customization for Transformer Company</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="container">
+			  <div class="row">
+			    <div class="col-lg-3 projectsPhotoCont">
+			      <!-- <img class="border5px" src="img/projectimg/EnDecrypt1.png" alt="EnDecrypt Image" width="260" height="300"> -->
+			      <img class="border5px projectImage img-fluid" src="img/projectimg/bitrix24.png" alt="Bitrix24">
+			    </div>
+			    <div class="col-lg-9 projectsGeneralInfo border5px">
+			     	<p>Case</p>
+			     	<p>This company already has it's own system to manage the customer's transaction history, and to link the orders into their project management system. But they have more than 3 separate systems for this. What they require is one system that can accomodate all of their existing system, while maintaining their system's flow, information display, etc.</p>
+			     	<p>Solution</p>
+			     	<p>Customisation toward Bitrix24's CRM, tasks, and projects to accomodate the specific needs of the company. When the company received a new Lead, they can do the extra workflows to coordinate between departments even before that lead became a deal. Once the lead has became a deal, a new project with desired template will be created, and every tasks of that project will be synced with the company's master system, so everything can be monitored in the Bitrix24.</p>
+			     	<p>* Company's specific information not mentioned for confidential purpose</p>
+			     	<!-- <p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/EnDecrypt" target="_blank">GitHub Repository</a>, check it out :)</p> -->
+			    </div>
+			  </div>
+			</div><br>
+		</div><br>
+
+		<!-- Project Container Right Photo -->
+		<div class="projectCont rightPhoto">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="projectsAnimatedTextSection leftProjectHeader">
+						<p id="pProjectsName" class="pProjectsName" style="">Bitrix24 - Workorder and Units Module Development for Golf Buggy Company</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="container">
+			  <div class="row">
+			    <div class="col-lg-9 projectsGeneralInfo border5px">
+			     	<p>Case</p>
+			     	<p>A golf buggy company requires a system that enables them to keep track about their customer's transaction and interaction with the company, which already provided by the functionality of Bitrix24's CRM. The main case was the company also requires a system to store the information about their customer's ownership regarding the units they have produced, and the service history of those units, which is not provided by Bitrix24's default functionality.</p>
+			     	<p>Solution</p>
+			     	<p>Development toward custom units module was made specifically for the company, so they can also store the unit's ownership and even change the unit's ownership toward other customer. Workorder module also was made so the company can record and even assign their employees to do the workorder for the registered unit. When a workorder is assigned to the company's employee, every updates regarding the workorder activity also stored to the Bitrix24 by this module. In case the unit's ownership has to be changed, the service record of that unit remains intact. With these extra modules, the company now able to keep their units in their monitoring track, even if they are owned by their customers.</p>
+			     	<p>* Company's specific information not mentioned for confidential purpose</p>
+			     	<!-- <p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/HuffmanBST" target="_blank">GitHub Repository</a>, check it out :)</p> -->
+			    </div>
+			    <div class="col-lg-3 projectsPhotoCont">
+			      <!-- <img class="border5px" src="img/projectimg/PaqMan1.png" alt="Paq Man Image" width="200" height="300"> -->
+			      <img class="border5px projectImage img-fluid" src="img/projectimg/bitrix24.png" alt="Bitrix24">
+			    </div>
+			  </div>
+			</div><br>
+		</div><br>
+
+		<!-- Project Container Left Photo -->
+		<div class="projectCont leftPhoto">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="projectsAnimatedTextSection rightProjectHeader">
+						<p id="pProjectsName" class="pProjectsName" style="">Bitrix24 - Project and Tasks Customization and Custom Module Development for Bank Company</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="container">
+			  <div class="row">
+			    <div class="col-lg-3 projectsPhotoCont">
+			      <!-- <img class="border5px" src="img/projectimg/EnDecrypt1.png" alt="EnDecrypt Image" width="260" height="300"> -->
+			      <img class="border5px projectImage img-fluid" src="img/projectimg/bitrix24.png" alt="Bitrix24">
+			    </div>
+			    <div class="col-lg-9 projectsGeneralInfo border5px">
+			     	<p>Case</p>
+			     	<p>A bank company needed a Project Management system, enabling the company to managing their internal tasks and projects monitoring for every quarter of the year. The standard Bitrix24 does feature the Project and Tasks creation, but did not provide the company's unique system of Action Step Summarization and Reporting. The company needed such a way so when they "Initiate Monitoring Sequence", all responsible persons of the tasks will no longer can start nor finish the task, until they completed the monitoring sequence for that task.</p>
+			     	<p>Solution</p>
+			     	<p>Customization toward Bitrix24's Task has been made, so the corresponding users can "Initiate Monitoring Sequence for selected quarter of the year", which will locks all the tasks and requires the responsible person to fill a mandatory form for the monitoring report, followed by approval from the Project's Owner, and finalized by the appointed Higher-ups to unlock the tasks. An extra module also developed to summarize the "Monitoring Sequence Data/Report", and display it in a unique form of summary page. With these enhancements, the company now able to record their project's progress periodicaly, and view all the recorded data and summary in a visualisation that they already familiar to, ensuring they can always aware of their internal project and tasks situation.</p>
+			     	<p>* Company's specific information not mentioned for confidential purpose</p>
+			     	<!-- <p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/EnDecrypt" target="_blank">GitHub Repository</a>, check it out :)</p> -->
+			    </div>
+			  </div>
+			</div><br>
+		</div><br>
 
 		<!-- Project Container Right Photo -->
 		<div class="projectCont rightPhoto">
