Head fixed, with another extra experience.

--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,33 @@
 
 
 
+		<!-- Project Container Left Photo -->
+		<div class="projectCont leftPhoto">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="projectsAnimatedTextSection rightProjectHeader">
+						<p id="pProjectsName" class="pProjectsName" style="">Bitrix24 - Employee Absence Customization for A Bank Company</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="container">
+			  <div class="row">
+			    <div class="col-lg-3 projectsPhotoCont">
+			      <!-- <img class="border5px" src="img/projectimg/EnDecrypt1.png" alt="EnDecrypt Image" width="260" height="300"> -->
+			      <img class="border5px projectImage img-fluid" src="img/projectimg/bitrix24.png" alt="Bitrix24">
+			    </div>
+			    <div class="col-lg-9 projectsGeneralInfo border5px">
+			     	<p>Case</p>
+			     	<p>A bank company requires an absence system for their employees, where they required to do the absence from the mobile phone, in the pre determined location, and also submitting the present photo as the proof. The Bitrix24's default time and report feature does accomodate the clock-in/clock-out feature, but does not limit the absence location nor requires the user to include the present photo for proof.</p>
+			     	<p>Solution</p>
+			     	<p>Customization toward Bitrix24 Mobile Timeman's template/UI and component/program. Since Bitrix24 Mobile App's clock-in/out page is retrieved from specific component from the Bitrix24's main system (back-end side), the customization can be made directly from the main system itself. An extra module, and also some page to maintain the location limitation and photo management also has been made to accomodate the feature needs.</p>
+			     	<p>* Company's specific information not mentioned for confidential purpose</p>
+			     	<!-- <p>Project source available on my <a style="color: black; text-decoration: underline;" href="https://github.com/Jastino747/EnDecrypt" target="_blank">GitHub Repository</a>, check it out :)</p> -->
+			    </div>
+			  </div>
+			</div><br>
+		</div><br>
+
 		<!-- Project Container Right Photo -->
 		<div class="projectCont rightPhoto">
 			<div class="container">
